java-test-app/demo/k8s/app-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: java-test-app
  namespace: java-test-app
  labels:
    app: java-test-app
    app.kubernetes.io/component: java-test-app
    app.kubernetes.io/instance: java-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-test-app
  template:
    metadata:
      labels:
        app: java-test-app
    spec:
      containers:
        - name: java-test-app
          image: docker.io/jr91/java-test-app-example@sha256:d20bb98241b74d60f4f116df5ecdcc1a50316fa31449ed1bd8d2fe452bb00882
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
