java-test-app/demo/k8s/app-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: java-test-app
  namespace: java-test-app
  labels:
    app: java-test-app
    app.kubernetes.io/component: java-test-app
    app.kubernetes.io/instance: java-test-app
  annotations:
    argocd.argoproj.io/sync-wave: "9999"  # Manage resource sync order with Argo CD
spec:
  to:
    kind: Service
    name: java-test-app
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
